--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,100 @@
-.App {
+.app-container {
   text-align: center;
+  height: 800px;
+  max-width: 800px;
+  background-color: blue;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+
+
+/* todos status styling */
+
+.todos-status-container {
+  width: 800px;
+  height: 30px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.todos-status-all {
+  width: 175px;
+  height: 25px;
+  margin: auto;
+  background-color: purple;
+  font-size: 20px;
 }
 
-.App-title {
-  font-size: 1.5em;
+.todos-status-pending {
+  width: 175px;
+  height: 25px;
+  margin: auto;
+  background-color: yellow;
+  font-size: 20px;
+
 }
 
-.App-intro {
-  font-size: large;
+.todos-status-completed {
+  width: 175px;
+  height: 25px;
+  margin: auto;
+  background-color: green;
+  font-size: 20px;
+
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+
+
+/* Number Counter Styles */
+
+.number-counter-all {
+  width: 40px;
+  height: 25px;
+  margin: auto;
+  background-color: purple;
+  border: 3px solid white;
+  font-size: 20px;
+  border-radius: 15px;
+
+}
+
+.number-counter-pending {
+  width: 40px;
+  height: 25px;
+  margin: auto;
+  background-color: yellow;
+  font-size: 20px;
+  border-radius: 15px;
+  border: 3px solid white;
+
+
+
+}
+.number-counter-completed {
+  width: 40px;
+  height: 25px;
+  margin: auto;
+  background-color: green;
+  font-size: 20px;
+  border-radius: 15px;
+  border: 3px solid white;
+
+
+}
+
+
+.todos-clear-completed {
+  width: 155px;
+  height: 25px;
+  margin: auto;
+  background-color: red;
+  font-size: 20px;
+  border-radius: 10px;
+  border: 3px solid white;
+}
+
+.todos-clear-completed a {
+  color: #FFFFFF;
+  text-decoration: none;
 }
