--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   flex-direction: column;
 }
 
+.app-title {
+  text-decoration: underline;
+  font-size: 45px;
+  font-weight: 600;
+}
 
 
 /* todos status styling */
@@ -80,9 +85,9 @@
   border-radius: 15px;
   border: 3px solid white;
 
-
 }
 
+/* Clear Completed Todos */
 
 .todos-clear-completed {
   width: 155px;
@@ -97,4 +102,32 @@
 .todos-clear-completed a {
   color: #FFFFFF;
   text-decoration: none;
+}
+
+/* Input Styles */
+
+.form-add-container {
+  display:flex;
+  justify-content: space-around;
+  flex-flow: row;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.input-add {
+  flex: 1 80%;
+  font-size: 30px;
+  text-align: center;
+  height: 40px;
+
+
+}
+
+.button-add {
+  flex: 2 10%;
+  height: 47px;
+  font-size: 19px;
+  border-radius: 20px;
+
+
 }
