--- a/src/App.css
+++ b/src/App.css
@@ -13,86 +13,145 @@
   font-weight: 600;
 }
 
+.todos-container {
+  width: 800px;
+  height: 800px;
+  display: flex;
+  flex-direction: row;
 
-/* todos status styling */
+}
+
+.todos-list {
+  width: 550px;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+}
+
+
+/* TODOS status FLEXBOX COLUMNS */
 
 .todos-status-container {
-  width: 800px;
-  height: 30px;
+  width: 250px;
+  height: 125px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+/* ROW 1
+    ALL TODOS*/
+
+.row-1 {
+  display:flex;
+  flex-direction: row;
+  width: 250px;
+  height: 25px;
+  margin: auto;
+
 }
 
 .todos-status-all {
   width: 175px;
   height: 25px;
-  margin: auto;
-  background-color: purple;
   font-size: 20px;
+  background-color: purple;
+
+
+}
+
+.number-counter-all {
+  width: 40px;
+  height: 25px;
+  font-size: 20px;
+  border-radius: 15px;
+  background-color: purple;
+  border: 3px solid white;
+}
+
+/* ROW 2
+    Pending TODOS*/
+
+.row-2 {
+  display:flex;
+  flex-direction: row;
+  width: 250px;
+  height: 25px;
+  margin: auto;
 }
 
 .todos-status-pending {
   width: 175px;
   height: 25px;
-  margin: auto;
+  font-size: 20px;
   background-color: yellow;
-  font-size: 20px;
 
-}
-
-.todos-status-completed {
-  width: 175px;
-  height: 25px;
-  margin: auto;
-  background-color: green;
-  font-size: 20px;
-
-}
-
-
-
-/* Number Counter Styles */
-
-.number-counter-all {
-  width: 40px;
-  height: 25px;
-  margin: auto;
-  background-color: purple;
-  border: 3px solid white;
-  font-size: 20px;
-  border-radius: 15px;
 
 }
 
 .number-counter-pending {
   width: 40px;
   height: 25px;
-  margin: auto;
-  background-color: yellow;
   font-size: 20px;
   border-radius: 15px;
+  background-color: yellow;
   border: 3px solid white;
 
+}
+
+
+/* ROW 3
+    Number of Completed TODOS */
+
+.row-3 {
+  display:flex;
+  flex-direction: row;
+  width: 250px;
+  height: 25px;
+  margin: auto;
+}
+
+
+
+.todos-status-completed {
+  width: 175px;
+  height: 25px;
+  font-size: 20px;
+  background-color: green;
 
 
 }
+
 .number-counter-completed {
   width: 40px;
   height: 25px;
-  margin: auto;
-  background-color: green;
   font-size: 20px;
   border-radius: 15px;
   border: 3px solid white;
+  background-color: green;
+
 
 }
 
-/* Clear Completed Todos */
+
+
+
+
+
+
+/* ROW 4
+Clear Completed Todos */
+.row-4 {
+  display: flex;
+  flex-direction: row;
+  width: 250px;
+  height:25px;
+  margin:auto;
+}
 
 .todos-clear-completed {
   width: 155px;
   height: 25px;
-  margin: auto;
   background-color: red;
   font-size: 20px;
   border-radius: 10px;
