--- a/src/Components/DisplayOutput.css
+++ b/src/Components/DisplayOutput.css
@@ -1,17 +1,15 @@
 .display-list {
-    background: #3399ff;
     margin: 0;
     padding: 0;
     list-style: none;
     width: inherit;
     text-align: left;
     font-size: 25px;
-
 }
 
 li {
   padding: 1px;
-  
+
 }
 
 .item-container {
@@ -25,16 +23,17 @@ li {
     flex: 1;
     flex-grow: 1;
     margin: auto;
-    align-content: center;
   }
+
+
 
 label {
     flex: 2;
-    flex-grow: 13;
+    flex-grow: 12;
     margin: auto;
     background: white;
     height: 30px;
-    border: 5px ridge blue;
+    border: 3px groove blue;
 
 }
 
@@ -42,5 +41,9 @@ label {
     flex: 3;
     flex-grow: 1;
     margin: auto;
-
+    padding-left: 10px;
   }
+
+i {
+    color: red;
+}
