resized remove todo item icon

--- a/src/Components/DisplayOutput.css
+++ b/src/Components/DisplayOutput.css
@@ -41,9 +41,12 @@ label {
     flex: 3;
     flex-grow: 1;
     margin: auto;
-    padding-left: 10px;
+    padding-left: 1%;
+    padding-right: 1%;
   }
 
 i {
+    font-size: 35px;
+    text-align: center;
     color: red;
 }
