Changed clear label and status colors

--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@
   width: 175px;
   height: 25px;
   font-size: 20px;
-  background-color: purple;
+  background: #4286f4;
   border-radius: 10px;
   border: 3px solid white;
 
@@ -107,7 +107,7 @@
   height: 25px;
   font-size: 20px;
   border-radius: 15px;
-  background-color: purple;
+  background-color: #4286f4;
   border: 3px solid white;
 }
 
@@ -130,7 +130,7 @@
   width: 175px;
   height: 25px;
   font-size: 20px;
-  background-color: yellow;
+  background-color: #f2fc5f;
   border-radius: 10px;
   border: 3px solid white;
 
@@ -142,7 +142,7 @@
   height: 25px;
   font-size: 20px;
   border-radius: 15px;
-  background-color: yellow;
+  background-color: #f2fc5f;
   border: 3px solid white;
 
 }
@@ -169,7 +169,7 @@
   width: 175px;
   height: 25px;
   font-size: 20px;
-  background-color: green;
+  background-color: #4ce02f;
   border-radius: 10px;
   border: 3px solid white;
 
@@ -181,7 +181,7 @@
   font-size: 20px;
   border-radius: 15px;
   border: 3px solid white;
-  background-color: green;
+  background-color: #4ce02f;
 
 }
 
@@ -189,28 +189,29 @@
 Clear Completed Todos */
 .row-4 {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 250px;
   height:25px;
-  justify-content: space-around;
   padding: 5%;
-
+  margin: auto;
 
 }
 
 .todos-clear-completed {
   width: 155px;
   height: 25px;
-  background-color: red;
+  background-color: #f42236;
   font-size: 20px;
   border-radius: 10px;
   border: 3px solid white;
+  margin: auto;
 
 }
 
 .todos-clear-completed a {
   color: #FFFFFF;
   text-decoration: none;
+  margin: auto;
 }
 
 /* Input Styles */
