--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,32 @@
   width: 100%;
   height: 100%;
   background-color: lightblue;
+  display: block;
+
+}
+
+.header-container {
+  width: 100%;
+  height: 25%;
+  border:1px solid black;
+  display: flex;
+
+}
+
+.title-date-container {
+  width: 60%;
+  height: 100%;
+  background-color: yellow;
+  border:1px solid black;
+
+}
+
+.progress-container {
+  width: 40%;
+  height: 100%;
+  background-color: yellow;
+  border:1px solid black;
+  display: flex;
+  flex-wrap: wrap;  
 
 }
