--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,17 @@
   background-color: yellow;
   border:1px solid black;
 
+
 }
+
+/*
+
+progress container and container content styles
+    located: top right of App
+    contains: total todo count
+              ,pending todo count
+              ,completed todo's Percentage
+*/
 
 .progress-container {
   width: 40%;
@@ -28,6 +38,29 @@
   background-color: yellow;
   border:1px solid black;
   display: flex;
-  flex-wrap: wrap;  
+  flex-direction: column;
+
+}
+
+.total-pending-container {
+  width: 100%;
+  border:1px solid black;
+  display: flex;
+}
+
+.total-todos {
+  width: 50%;
+
+}
+
+.pending-todos {
+  width: 50%;
+
+}
+
+.completed-percentage-container {
+  width: 100%;
+  height: 10%;
+  border:1px solid black;
 
 }
