--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .app-container {
   width: 100%;
   height: 100%;
-  background-color: lightblue;
   display: block;
 
 }
@@ -22,6 +21,15 @@ header container and container content styles
   display: flex;
 
 }
+
+.header-background {
+  width: 100%;
+  height: inherit;
+  background-size: cover;
+  position: absolute;
+  z-index: -1;
+  
+}
 /*
 
 title container and container content styles
@@ -32,9 +40,8 @@ title container and container content styles
 */
 
 .title-date-container {
-  width: 60%;
+  width: 70%;
   height: 100%;
-  background-color: yellow;
   border:1px solid black;
 
 }
@@ -49,9 +56,8 @@ progress container and container content styles
 */
 
 .progress-container {
-  width: 40%;
+  width: 30%;
   height: 100%;
-  background-color: yellow;
   border:1px solid black;
   display: flex;
   flex-direction: column;
