--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,7 @@ header container and container content styles
 
 .header-container {
   width: 100%;
-  height: 25%;
-  border:1px solid black;
+  height: 175px;
   display: flex;
 
 }
@@ -42,7 +41,6 @@ title container and container content styles
 .title-date-container {
   width: 60%;
   height: 100%;
-  border:1px solid black;
   opacity: 0.5;
 
 }
@@ -59,36 +57,33 @@ progress container and container content styles
 .progress-container {
   width: 40%;
   height: 100%;
-  border:1px solid black;
   display: flex;
   flex-direction: column;
   opacity: 1.0;
+
 
 }
 
 .total-pending-container {
   width: 100%;
-  border:1px solid black;
   margin: auto;
   display: flex;
+  height: 125px;
 
 }
 
 .total-todos {
   width: 50%;
-  border:1px solid black;
 
 }
 
 .pending-todos {
   width: 50%;
-  border:1px solid black;
 
 }
 
 .completed-percentage-container {
   width: 100%;
-  border:1px solid black;
 
 }
 
@@ -127,15 +122,14 @@ content container and container content styles
   width: 40px;
   height: 40px;
   background-size: contain;
-  position: absolute;
   border-radius: 19px;
   align-items: center;
   background-color: darkblue;
+  position: absolute;
   box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .add-icon {
-
 
 }
 
