--- a/src/Components/DisplayOutput.css
+++ b/src/Components/DisplayOutput.css
@@ -1,52 +1,27 @@
-.display-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    width: inherit;
-    text-align: left;
-    font-size: 25px;
+ul {
+  list-style-type: none;
+  margin:0;
+  padding: 0;
 }
 
-li {
-  padding: 1px;
 
-}
-
-.item-container {
+.display-list-wrapper {
   display: flex;
-  justify-content: space-around;
-  height: 40px;
+  flex-direction: column;
+  border: 1px solid black;
+}
+
+
+.display-list-item {
+  height: 50px;
+  width: 100%;
 
 }
 
-.item-done-checkbox {
-    flex: 1;
-    flex-grow: 1;
-    margin: auto;
-  }
-
-
-
-label {
-    flex: 2;
-    flex-grow: 12;
-    margin: auto;
-    background: white;
-    height: 30px;
-    border: 3px groove blue;
+.display-item-done {
 
 }
 
-.item-destroy-button {
-    flex: 3;
-    flex-grow: 1;
-    margin: auto;
-    padding-left: 1%;
-    padding-right: 1%;
-  }
-
-i {
-    font-size: 35px;
-    text-align: center;
-    color: red;
+.display-item-divider {
+  border-top: 5px solid DeepSkyBlue;
 }
