--- a/src/Components/DisplayOutput.css
+++ b/src/Components/DisplayOutput.css
@@ -6,21 +6,33 @@ ul {
 
 
 .display-list-wrapper {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid black;
+
 }
 
 
 .display-list-item {
   height: 50px;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: 1px solid black;
+  justify-content: space-between;
 
 }
+
+.display-item-checkbox {
+}
+
+
+.display-item-text {
+}
+
 
 .display-item-done {
-
 }
+
+
 
 .display-item-divider {
   border-top: 5px solid DeepSkyBlue;
