--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,10 @@ header container and container content styles
   position: absolute;
   z-index: -1;
 
+
 }
+
+
 /*
 
 title container and container content styles
@@ -42,7 +45,26 @@ title container and container content styles
   width: 60%;
   height: 100%;
   opacity: 0.5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
+}
+.title-container {
+  font-family: 'Quicksand', sans-serif;
+  align-self: center;
+  font-size: 38px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  padding-right: 20%;
+}
+
+.date-container {
+  font-family: 'Crimson Text', serif;
+  font-size: 15px;
+  color: white;
+  padding-left: 8%;
 }
 
 /*
