--- a/src/App.css
+++ b/src/App.css
@@ -162,20 +162,13 @@ content container and container content styles
 
 .content-container {
   height: 75%;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 
+
 .form-container {
-  width: 100%;
-  height: 28%;
-
-
-}
-
-.form-form {
-  width: 100%;
-  height: 100%;
   display: flex;
   justify-content: space-between;
 }
@@ -206,11 +199,16 @@ content container and container content styles
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding-top: 2%;
 
 }
 
 .list-title {
   width: 100%;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  font-style: italic;
 }
 
 .completed-clear-container {
